--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,17 +5,17 @@
               <div class="card card-stats">
                   <div class="card-header card-header-warning card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">content_copy</i>
+                          <i class="material-icons">account_box</i>
                       </div>
-                      <p class="card-category">Used Space</p>
-                      <h3 class="card-title">49/50
-                          <small>GB</small>
+                      <p class="card-category">Attendance</p>
+                      <h3 class="card-title">99
+                          <small>%</small>
                       </h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
                           <i class="material-icons text-danger">warning</i>
-                          <a href="javascript:void(0)">Get More Space...</a>
+                          <a href="javascript:void(0)">click here to see for full report</a>
                       </div>
                   </div>
               </div>
@@ -42,23 +42,23 @@
                       <div class="card-icon">
                           <i class="material-icons">info_outline</i>
                       </div>
-                      <p class="card-category">Fixed Issues</p>
+                      <p class="card-category">Pre - Settlements</p>
                       <h3 class="card-title">75</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">local_offer</i> Tracked from Github
+                          <i class="material-icons">local_offer</i> Click here for full report
                       </div>
                   </div>
               </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
-                  <div class="card-header card-header-info card-header-icon">
+                  <div class="card-header card-header-primary card-header-icon">
                       <div class="card-icon">
-                          <i class="fa fa-twitter"></i>
+                          <i class="material-icons">report_problem</i>
                       </div>
-                      <p class="card-category">Followers</p>
+                      <p class="card-category">Incidents</p>
                       <h3 class="card-title">+245</h3>
                   </div>
                   <div class="card-footer">
@@ -67,6 +67,12 @@
                       </div>
                   </div>
               </div>
+          </div>
+      </div>
+
+      <div class="card">
+          <div class="card-body">
+              <h2>Welcome back <i>Admin</i></h2>
           </div>
       </div>
 
