--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,46 +1,55 @@
 <div class="limiter">
-  <div class="container-login100">
-    <div class="wrap-login100">
-      <form class="login100-form validate-form">
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <form class="login100-form validate-form">
 					<span class="login100-form-title p-b-26">
                       <img src="../../../assets/img/PotoGas.png" class="login-logo">
 					</span>
-        <span class="login100-form-title p-b-48">
+                <span class="login100-form-title p-b-48">
 						<i class="zmdi zmdi-font"></i>
 					</span>
 
-        <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-          <input class="input100" type="text" name="email">
-          <span class="focus-input100" data-placeholder="Email"></span>
-        </div>
+                <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
+                    <input class="input100" type="text" name="email">
+                    <span class="focus-input100" data-placeholder="Email"></span>
+                </div>
 
-        <div class="wrap-input100 validate-input" data-validate="Enter password">
+                <div class="wrap-input100 validate-input" data-validate="Enter password">
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-          <input class="input100" type="password" name="pass">
-          <span class="focus-input100" data-placeholder="Password"></span>
-        </div>
+                    <input class="input100" type="password" name="pass">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                </div>
 
-        <div class="container-login100-form-btn">
-          <div class="wrap-login100-form-btn">
-            <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn">
-              Login
-            </button>
-          </div>
-        </div>
+                <div class="container-login100-form-btn">
+                    <div class="wrap-login100-form-btn">
+                        <div class="login100-form-bgbtn"></div>
+                        <button class="login100-form-btn">
+                            Login
+                        </button>
+                    </div>
+                </div>
+                <div class="p-t-69 g-button">
+                    <div class="google-btn">
+                        <div class="google-icon-wrapper">
+                            <img class="google-icon"
+                                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+                        </div>
+                        <p class="btn-text"><b>Sign in with google</b></p>
+                    </div>
+                </div>
 
-        <div class="text-center p-t-115">
+                <div class="text-center p-t-115">
 						<span class="txt1">
 							Don’t have an account?
 						</span>
 
-          <a class="txt2" href="#">
-            Sign Up
-          </a>
+                    <a class="txt2" href="#">
+                        Sign Up
+                    </a>
+                </div>
+            </form>
         </div>
-      </form>
     </div>
-  </div>
 </div>
