--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -1,3 +1,13 @@
-<p>
-  sales works!
-</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h1>Test</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
