--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -76,7 +76,7 @@
           </div>
       </div>-->
 
-      <div class="row">
+      <!--<div class="row">
           <div class="col-md-12">
               <div class="card">
                   <div class="card-header card-header-danger">
@@ -212,7 +212,7 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div>-->
 
   </div>
 </div>
