--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -6,7 +6,7 @@
                     <div class="card-body">
                         <div class="input-group">
                             <input class="form-control col-3" type="date"> &nbsp;&nbsp;&nbsp; <input class="form-control col-3" type="date"> &nbsp;&nbsp;&nbsp; <input
-                                type="text" class="form-control col-3" placeholder="Filter..."> <a [routerLink]="/add-sales" class="btn btn-primary btn-success"><span class="glyphicon glyphicon-plus"></span> Add Sales Records</a>
+                                type="text" class="form-control col-3" placeholder="Filter..."> <a [routerLink]="['/add-sales']" class="btn btn-primary btn-success"><span class="glyphicon glyphicon-plus"></span> Add Sales Records</a>
                         </div>
                         <table class="table">
                             <tr>
