Ui color update

--- a/src/assets/scss/core/variables/_brand.scss
+++ b/src/assets/scss/core/variables/_brand.scss
@@ -10,3 +10,8 @@ $brand-warning:              $orange-500 !default;
 $brand-danger:               $red-500 !default;
 $brand-rose:                 $pink-500 !default;
 $brand-inverse:              $black-color !default;
+
+// PotoGas Colors
+
+$brand-orange:               $potogas-orange !default;
+$brand-blue:                 $potogas-blue !default;
