--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -13300,7 +13300,7 @@ h2.title {
   background-color: #FFB236; }
 
 .fixed-plugin .badge-danger {
-  background-color: #f44336; }
+  background-color: #F60; }
 
 .fixed-plugin .badge-purple {
   background-color: #9368E9; }
