--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
 
             <ul class="navbar-nav">
+                <span><strong>Last Login Date:</strong> {{ lastlogintime | date: 'dd/MM/yyyy'}}</span>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span>
