--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -11,3 +11,8 @@
     position: relative;
     z-index: 4;
 }
+
+/*::ng-deep .sidebar li.active > a {
+    background-color: #F60;
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
+}*/
