--- a/src/assets/scss/core/variables/_colors.scss
+++ b/src/assets/scss/core/variables/_colors.scss
@@ -320,3 +320,9 @@ $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             #999999 !default; // #999999
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+
+
+// PotoGas Colors
+
+$potogas-orange: #F60    !default;
+$potogas-blue:   #355da7 !default;
