--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
-    <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="danger" data-background-color="blue" data-image="./assets/img/sidebar-1.jpg">
         <app-sidebar></app-sidebar>
-        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-1.jpg)"></div>
     </div>
     <div class="main-panel">
         <app-navbar></app-navbar>
@@ -10,7 +10,7 @@
             <app-footer></app-footer>
         </div>
     </div>
-   <!-- <div class="fixed-plugin">
+    <!--<div class="fixed-plugin">
         <div class="dropdown show-dropdown open show">
             <a href="#" data-toggle="dropdown" aria-expanded="true">
                 <i class="fa fa-cog fa-2x"> </i>
