--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -16,3 +16,8 @@
     background-color: #F60;
     box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
 }*/
+
+
+::ng-deep .sidebar .nav li a, .sidebar .nav li .dropdown-menu a{
+    color: white !important;
+}
