--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,13 +11,17 @@
 
     <ul class="nav navbar-nav nav-mobile-menu">
 
-        <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-                <i class="material-icons">person</i>
-                <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                </p>
+        <li class="nav-item dropdown">
+            <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span>
+                            <img src="../../../assets/img/faces/marc.jpg" width="40" height="40" class="rounded-circle"></span> &nbsp;&nbsp;
+                <span><strong>Welcome Admin</strong></span>
             </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">settings</i><span>Settings</span></a>
+                <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">contact_support</i>Support</a>
+                <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">directions_run</i>Logout</a>
+            </div>
         </li>
     </ul>
   </div>
