--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -4,7 +4,22 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div id="spreadsheet"></div>
+                        <!--<div>
+                            <form class="form-inline">
+                                <div class="">
+                                    <label >PERIODO:</label>
+                                </div>
+                                <div class="periodo">
+                                    <label>PERIODO ABIERTO:</label>
+                                </div>
+                                <div class="periodo">
+                                    <label>Autotanque- Servios:</label>
+                                </div>
+                            </form>
+                        </div>-->
+                        <div id="litros"></div>
+<!--                        <div id="servicios"></div>-->
+<!--                        <div id="cilindros"></div>-->
                     </div>
                 </div>
             </div>
