--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -17,9 +17,23 @@
                                 </div>
                             </form>
                         </div>-->
-                        <div id="litros"></div>
-<!--                        <div id="servicios"></div>-->
-<!--                        <div id="cilindros"></div>-->
+
+                        <div align="center">
+                            <form class="form-inline">
+                                <div class="">
+                                    <button type="button" class="btn btn-primary" (click)="litros = true">Litros</button>
+                                </div>
+                                <div class="periodo">
+                                    <button type="button" class="btn btn-primary" (click)="servicioss = true">Servicios</button>
+                                </div>
+                                <div class="periodo">
+                                    <button type="button" class="btn btn-primary" (click)="cilindros= true">Cilindros</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div *ngIf="litros === true" id="litros"></div>
+                        <div *ngIf="servicioss === true" id="servicios"></div>
+                        <div *ngIf="cilindros === true" id="cilindros"></div>
                     </div>
                 </div>
             </div>
