--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body" style="overflow: auto;">
                         <!--<div>
                             <form class="form-inline">
                                 <div class="">
