--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -4,13 +4,13 @@
                 <div align="center">
                         <form class="form-inline">
                             <div class="">
-                                <button type="button" class="btn btn-primary" (click)="litros = true">Litros</button>
+                                <button type="button" class="btn btn-primary" (click)="litroscheck()">Litros</button>
                             </div>
                             <div class="periodo">
-                                <button type="button" class="btn btn-primary" (click)="servicioss = true">Servicios</button>
+                                <button type="button" class="btn btn-primary" (click)="serviciosscheck()">Servicios</button>
                             </div>
                             <div class="periodo">
-                                <button type="button" class="btn btn-primary" (click)="cilindros= true">Cilindros</button>
+                                <button type="button" class="btn btn-primary" (click)="cilindroscheck()">Cilindros</button>
                             </div>
                         </form>
                     </div>
@@ -31,10 +31,10 @@
                             </form>
                         </div>-->
 
-                        
-                        <div *ngIf="litros === true" id="litros"></div>
-                        <div *ngIf="servicioss === true" id="servicios"></div>
-                        <div *ngIf="cilindros === true" id="cilindros"></div>
+
+                        <div [hidden]="litros" id="litros"></div>
+                        <div  [hidden]="servicioss" id="servicios"></div>
+                        <div [hidden]="cilindros" id="cilindros"></div>
                     </div>
                 </div>
             </div>
