--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,9 +3,10 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="https://www.potogas.com/contacto.php">
+                    <!--<a href="https://www.potogas.com/contacto.php">
                         Contact Us
-                    </a>
+                    </a>-->
+                    <label>Plataforma Pre-Nomina V1.0</label>
                 </li>
                 <li>
                     <a href="https://www.potogas.com/quienes-somos.php">
@@ -19,7 +20,7 @@
         <div class="copyright pull-right">
             &copy;
             {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.potogas.com/" target="_blank">PotoGas</a>.
+            <a href="#" target="">Hecho por Ixlte Tec.</a>.
         </div>
     </div>
 </footer>
