--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
     <a href="https://www.potogas.com/" class="simple-text">
         <div class="logo-img">
-            <img src="../../../assets/img/logo_rombo.png"/>
+            <img src="../../../assets/img/logo-bn.png"/>
         </div>
 
     </a>
