--- a/src/app/views/sales/sales.component.html
+++ b/src/app/views/sales/sales.component.html
@@ -4,13 +4,13 @@
                 <div align="center">
                         <form class="form-inline">
                             <div class="">
-                                <button type="button" class="btn btn-primary" (click)="litroscheck()">Litros</button>
+                                <button type="button" class="btn " (click)="litroscheck()">Litros</button>
                             </div>
                             <div class="periodo">
-                                <button type="button" class="btn btn-primary" (click)="serviciosscheck()">Servicios</button>
+                                <button type="button" class="btn" (click)="serviciosscheck()">Servicios</button>
                             </div>
                             <div class="periodo">
-                                <button type="button" class="btn btn-primary" (click)="cilindroscheck()">Cilindros</button>
+                                <button type="button" class="btn " (click)="cilindroscheck()">Cilindros</button>
                             </div>
                         </form>
                     </div>
