--- a/src/app/views/sales/sales.component.scss
+++ b/src/app/views/sales/sales.component.scss
@@ -6,3 +6,12 @@ ul {
 //margin-right: 2px !important;
 margin-left: 200px !important;
 }
+
+button{
+  background-color: #F60;
+}
+
+.button:hover {
+  background-color: green !important;
+  color: #FFF;
+}
