--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,12 +12,12 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
 
             <ul class="navbar-nav">
-                <span><strong>Last Login Date:</strong> {{ lastlogintime | date: 'dd/MM/yyyy'}}</span>
+                <span><strong>Ultima sesión :</strong> {{ lastlogintime | date: 'dd/MM/yyyy'}}</span>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span>
                             <img src="../../../assets/img/faces/marc.jpg" width="40" height="40" class="rounded-circle"></span> &nbsp;&nbsp;
-                        <span><strong>Welcome Admin</strong></span>
+                        <span><strong>Bienvenido Admin</strong></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">settings</i><span>Settings</span></a>
