--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,19 +8,19 @@
                     </a>-->
                     <label>Plataforma Pre-Nomina V1.0</label>
                 </li>
-                <li>
+                <!--<li>
                     <a href="https://www.potogas.com/quienes-somos.php">
                         About Us
                     </a>
-                </li>
+                </li>-->
 
 
             </ul>
         </nav>
         <div class="copyright pull-right">
             &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="#" target="">Hecho por Ixlte Tec.</a>.
+            {{test | date: 'yyyy'}},
+            Hecho por Ixlte Tec.
         </div>
     </div>
 </footer>
