--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,13 +14,13 @@
         <li class="nav-item dropdown">
             <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span>
-                            <img src="../../../assets/img/faces/marc.jpg" width="40" height="40" class="rounded-circle"></span> &nbsp;&nbsp;
-                <span><strong>Welcome Admin</strong></span>
+                            <img src="{{ImageUrl}}" width="40" height="40" class="rounded-circle"></span> &nbsp;&nbsp;
+                <span><strong>{{UserInfo}}</strong></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">settings</i><span>Settings</span></a>
                 <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">contact_support</i>Support</a>
-                <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">directions_run</i>Logout</a>
+                <a class="dropdown-item" (click)="logout()"><i class="material-icons">directions_run</i>Logout</a>
             </div>
         </li>
     </ul>
