--- a/src/assets/scss/core/variables/_brand.scss
+++ b/src/assets/scss/core/variables/_brand.scss
@@ -3,8 +3,8 @@
 
 /*     brand Colors              */
 
-$brand-primary:              $purple-500 !default;
-$brand-info:                 $cyan-500 !default;
+$brand-primary:              $potogas-orange !default;
+$brand-info:                 $potogas-blue !default;
 $brand-success:              $green-500 !default;
 $brand-warning:              $orange-500 !default;
 $brand-danger:               $red-500 !default;
