Login Screen UI Update

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -11,7 +11,7 @@
 
                 <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
                     <input class="input100" type="text" name="email">
-                    <span class="focus-input100" data-placeholder="Email"></span>
+                    <span class="focus-input100" data-placeholder="USUARIO"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Enter password">
@@ -19,18 +19,29 @@
 							<i class="zmdi zmdi-eye"></i>
 						</span>
                     <input class="input100" type="password" name="pass">
-                    <span class="focus-input100" data-placeholder="Password"></span>
+                    <span class="focus-input100" data-placeholder="Contraseña"></span>
                 </div>
 
+                <!--<div class="wrap-input100" >
+				    <input class="input100" type="checkbox" name="rememberme">
+                    <span class="focus-input100" data-placeholder="Recuerdame"></span>
+                </div>-->
+                <div class="checkbox">
+                    <label class="checkbox">
+                        <input name="checkbox" type="checkbox" value="Recuerdame"/>
+                        Recuerdame
+                    </label>
+                </div>
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
                         <button class="login100-form-btn">
-                            Login
+                            Acceder
                         </button>
                     </div>
                 </div>
-                <div class="p-t-69 g-button">
+                <a href="">
+                <div class="p-t-25 g-button">
                     <div class="google-btn">
                         <div class="google-icon-wrapper">
                             <img class="google-icon"
@@ -39,16 +50,8 @@
                         <p class="btn-text"><b>Sign in with google</b></p>
                     </div>
                 </div>
+                </a>
 
-                <div class="text-center p-t-115">
-						<span class="txt1">
-							Don’t have an account?
-						</span>
-
-                    <a class="txt2" href="#">
-                        Sign Up
-                    </a>
-                </div>
             </form>
         </div>
     </div>
