--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -159,11 +159,12 @@ iframe {
 }
 
 .wrap-login100 {
-  width: 390px;
+  //width: 390px;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  padding: 77px 55px 33px 55px;
+  //padding: 77px 55px 33px 55px;
+  padding: 17px 55px 33px 55px;
 
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
@@ -3467,7 +3468,7 @@ iframe {
 
 
 .login-logo{
-  width: 169px;
+  width: 100px;
 }
 
 
@@ -3478,12 +3479,17 @@ iframe {
 $white: #fff;
 $google-blue: #4285f4;
 $button-active-blue: #1669F2;
-.g-button{
+/*.g-button{
   padding-left: 50px;
+}*/
+
+a,
+a label {
+  cursor: pointer;
 }
 
 .google-btn {
-  width: 184px;
+  width: 199px;
   height: 42px;
   background-color: $google-blue;
   border-radius: 2px;
