--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -47,7 +47,7 @@
                             <img class="google-icon"
                                  src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
                         </div>
-                        <p class="btn-text"><b>Sign in with google</b></p>
+                        <p class="btn-text"><b>Inicia sesión con Google</b></p>
                     </div>
                 </div>
                 </a>
