--- a/src/app/views/validators/validators.component.html
+++ b/src/app/views/validators/validators.component.html
@@ -1,3 +1,6 @@
-<p>
-  validators works!
-</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <div class="row">
+    </div>
+  </div>
+</div>
