--- a/src/app/views/attendance/attendance.component.html
+++ b/src/app/views/attendance/attendance.component.html
@@ -1,3 +1,15 @@
-<p>
-  attendance works!
-</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body" style="overflow: auto;">
+                        <div  id="attendance"></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
