--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -10,7 +10,7 @@
 					</span>
 
                 <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                    <input class="input100" type="text" name="email">
+                    <input class="input100" type="text" name="email" [(ngModel)]="email">
                     <span class="focus-input100" data-placeholder="USUARIO"></span>
                 </div>
 
@@ -18,7 +18,7 @@
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-                    <input class="input100" type="password" name="pass">
+                    <input class="input100" type="password" name="pass" [(ngModel)]="pass">
                     <span class="focus-input100" data-placeholder="Contraseña"></span>
                 </div>
 
