--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,3 +1,41 @@
-<p>
-  register works!
-</p>
+<div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100">
+      <form class="login100-form validate-form">
+        <span class="login100-form-title p-b-26">
+          <img src="../../../assets/img/PotoGas.png" class="login-logo">
+        </span>
+        <span class="login100-form-title p-b-48">
+          <i class="zmdi zmdi-font"></i>
+        </span>
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="name" [(ngModel)]="name">
+          <span class="focus-input100" data-placeholder="Nombre"></span>
+        </div>
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="lastName" [(ngModel)]="lastName">
+          <span class="focus-input100" data-placeholder="Apellido"></span>
+        </div>
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" name="email" [(ngModel)]="email">
+          <span class="focus-input100" data-placeholder="Email"></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate="Enter password">
+          <span class="btn-show-pass">
+            <i class="zmdi zmdi-eye"></i>
+          </span>
+          <input class="input100" type="password" name="pass" [(ngModel)]="pass">
+          <span class="focus-input100" data-placeholder="Contraseña"></span>
+        </div>
+        <div class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn" (click)="registrar()">
+              Registrar
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
