--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100">
@@ -36,12 +35,12 @@
             </button>
           </div>
         </div>
+        <div class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn" style="text-align: right">
+            <a (click)="goToLogin()" style="font-size: 20px;">Ir al login</a>
+          </div>
+        </div>
       </form>
-=======
-<div class="main-content">
-  <div class="container-fluid">
-    <div class="row">
->>>>>>> e4dc99684baa8bab5166f174241b9b1680010eb3
     </div>
   </div>
 </div>
