querys pages and login fix

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -31,6 +31,14 @@
                 <i class="material-icons">{{menuItem.icon}}</i>
                 <p>{{menuItem.title}}</p>
             </a>
+            <span *ngIf="menuItem.childrens!=null">
+                <li routerLinkActive="active" *ngFor="let item of menuItem.childrens" class="{{item.class}} nav-item">
+                    <a class="nav-link" [routerLink]="[item.path]">
+                        <i class="material-icons">{{item.icon}}</i>
+                        <p>{{item.title}}</p>
+                    </a>
+                </li>
+            </span>
         </li>
     </ul>
 </div>
