--- a/src/app/views/sales/sales.component.scss
+++ b/src/app/views/sales/sales.component.scss
@@ -9,6 +9,8 @@ margin-left: 200px !important;
 
 button{
   background-color: #F60;
+  width:150px !important;
+  height:63px !important;
 }
 
 .button:hover {
